Bug 435785 - No longer shows available firmware updates
Summary: No longer shows available firmware updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: fwupd Backend (other bugs)
Version First Reported In: 5.21.4
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Abhijeet Sharma
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-04-15 18:29 UTC by Nate Graham
Modified: 2021-05-11 12:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-04-15 18:29:21 UTC
(git master everything KDE)

If I run `fwupdmgr update` on the CLI, I am prompted to update:

$ fwupdmgr update
Devices with no available firmware updates: 
 • UEFI Device Firmware
 • UEFI Device Firmware
 • UEFI Device Firmware
 • UEFI Device Firmware
 • UEFI dbx
Upgrade available for Embedded Controller from 0.1.13 to 0.1.15
20SACTO1WW must remain plugged into a power source for the duration of the update to avoid damage. Continue with update? [Y|n]:



However, when I open Discover, I see no available firmware updates. The following console log on startup looks suspicious:

Fwupd Error:  "Embedded Controller" [ "com.lenovo.ThinkPadN2QHT.firmware" ] cannot be updated 
Fwupd Error: Cannot Create App From Device Embedded Controller
Fwupd Error:  "System Firmware" [ "com.lenovo.ThinkPadN2QETXXW.firmware" ] cannot be updated 
Fwupd Error: Cannot Create App From Device System Firmware
Comment 1 Nate Graham 2021-04-15 18:37:57 UTC
$  (master) fwupdmgr get-devices
20SACTO1WW
│
├─Embedded Controller:
│     Device ID:          d4db94d2324ae6986698e7489b234c0377fd8465
│     Current version:    0.1.13
│     Minimum Version:    0.1.13
│     Vendor:             DMI:LENOVO
│     GUIDs:              ef793001-2e3e-42fa-ad94-c8d75c62909e
│                         3e51de31-6868-5a27-b91a-f6d89252742f
│     Device Flags:       • Internal device
│                         • Updatable
│                         • System requires external power source
│                         • Supported on remote server
│                         • Needs a reboot after installation
│                         • Device is usable for the duration of the update
│   
├─Prometheus:
│ │   Device ID:          d432baa2162a32c1554ef24bd8281953b9d07c11
│ │   Summary:            Fingerprint reader
│ │   Current version:    10.01.3158804
│ │   Vendor:             Synaptics (USB:0x06CB)
│ │   Install Duration:   2 seconds
│ │   GUIDs:              09e8bf16-3e69-50f5-bb66-c7a040248352
│ │                       8088f861-6318-5b1e-9ce4-fbddbedb09ac
│ │   Device Flags:       • Updatable
│ │                       • Supported on remote server
│ │                       • Cryptographic hash verification is available
│ │ 
│ └─Prometheus IOTA Config:
│       Device ID:        8dcffb5d059857368caa2b7b22371ebd831b0c0c
│       Current version:  0021
│       Minimum Version:  0021
│       Vendor:           Synaptics (USB:0x06CB)
│       GUIDs:            7c5a1e62-38fa-5859-9337-09dbac6377e4
│                         21a62213-7012-552c-9f1a-a51d07c87242
│       Device Flags:     • Updatable
│                         • Supported on remote server
│     
├─System Firmware:
│ │   Device ID:          09647b198775f1868cc695ec2685477e0964c323
│ │   Current version:    0.1.25
│ │   Vendor:             LENOVO (DMI:LENOVO)
│ │   GUIDs:              765f81e8-cc44-4d09-8fc4-9a47b167166e
│ │                       230c8b18-8d9b-53ec-838b-6cfc0383493a
│ │                       8789d0d6-4e4d-539f-acfc-97447b5ea3d7
│ │   Device Flags:       • Internal device
│ │                       • Updatable
│ │                       • System requires external power source
│ │                       • Supported on remote server
│ │                       • Needs a reboot after installation
│ │                       • Cryptographic hash verification is available
│ │                       • Device is usable for the duration of the update
│ │ 
│ └─UEFI dbx:
│       Device ID:        362301da643102b9f38477387e2193e57abaa590
│       Summary:          UEFI Revocation Database
│       Current version:  77
│       Minimum Version:  77
│       Vendor:           UEFI:Linux Foundation
│       Install Duration: 1 second
│       GUIDs:            14503b3d-73ce-5d06-8137-77c68972a341
│                         5971a208-da00-5fce-b5f5-1234342f9cf7
│                         c6682ade-b5ec-57c4-b687-676351208742
│                         f8ba2887-9411-5c36-9cee-88995bb39731
│       Device Flags:     • Internal device
│                         • Updatable
│                         • Needs a reboot after installation
│     
├─UEFI Device Firmware:
│     Device ID:          fe0a5afcd3063283e8535294cd48ad186d78707a
│     Current version:    3760260197
│     Minimum Version:    1
│     Vendor:             DMI:LENOVO
│     GUIDs:              aa6f3567-b1f3-46d1-bf8a-a21f17f286aa
│                         d29f1f35-194b-59d3-88f2-8f67e5fdc1f2
│     Device Flags:       • Internal device
│                         • Updatable
│                         • System requires external power source
│                         • Needs a reboot after installation
│                         • Device is usable for the duration of the update
│   
├─UEFI Device Firmware:
│     Device ID:          6c506442b8cac6d37736e5ae723b86b22271612c
│     Current version:    16777225
│     Minimum Version:    1
│     Vendor:             DMI:LENOVO
│     GUIDs:              bb6c1645-0b81-4a03-a9b9-412059ce56e5
│                         2d80ecb6-a925-51ec-b953-19d2ba0796e9
│     Device Flags:       • Internal device
│                         • Updatable
│                         • System requires external power source
│                         • Needs a reboot after installation
│                         • Device is usable for the duration of the update
│   
├─UEFI Device Firmware:
│     Device ID:          317fd9ef3f069f67047ab1163f8c040c3853cc38
│     Current version:    4784136
│     Minimum Version:    4784136
│     Vendor:             DMI:LENOVO
│     GUIDs:              1181d850-c3be-4b1d-985a-b28dca6ba6d8
│                         748748d3-60a0-5280-93ac-0a74d04ea947
│     Device Flags:       • Internal device
│                         • Updatable
│                         • System requires external power source
│                         • Needs a reboot after installation
│                         • Device is usable for the duration of the update
│   
├─UEFI Device Firmware:
│     Device ID:          dbb9eb47d0abd44dbd6748cc4d5db2936e82db80
│     Current version:    26885
│     Minimum Version:    1
│     Vendor:             DMI:LENOVO
│     GUIDs:              3a041c58-8295-414e-a1e2-16789f54c02c
│                         f34484c9-7652-59ba-bf61-41ce52e1ddd4
│     Device Flags:       • Internal device
│                         • Updatable
│                         • System requires external power source
│                         • Needs a reboot after installation
│                         • Device is usable for the duration of the update
│   
└─WDC PC SN730 SDBQNTY-512G-1001:
      Device ID:          3743975ad7f64f8d6575a9ae49fb3a8856fe186f
      Summary:            NVM Express Solid State Drive
      Current version:    11170101
      Vendor:             Sandisk Corp (NVME:0x15B7)
      GUIDs:              7b974856-317d-5538-a915-de0a6353750f
                          12c86995-0b90-5ec5-98f3-7a6ed4ca50e0
                          a39943dd-3afb-54f8-b110-c5a21f071200
                          fccbb6ea-e20e-58ad-bf8a-7fb7d43ff4c2
                          06b4e2aa-91af-508b-b06e-65e3b3189e97
      Device Flags:       • Internal device
                          • Updatable
                          • System requires external power source
                          • Supported on remote server
                          • Needs a reboot after installation
                          • Device is usable for the duration of the update
Comment 2 Aleix Pol 2021-04-15 18:55:22 UTC
Git commit 8ffd022f727eb193f9ba4dc079f46265ba136584 by Aleix Pol.
Committed on 15/04/2021 at 18:54.
Pushed by apol into branch 'master'.

fwupd: Make sure we initalise the device defaults

M  +1    -0    libdiscover/backends/FwupdBackend/FwupdResource.cpp
M  +2    -1    libdiscover/backends/FwupdBackend/FwupdResource.h

https://invent.kde.org/plasma/discover/commit/8ffd022f727eb193f9ba4dc079f46265ba136584
Comment 3 Nate Graham 2021-04-15 19:41:15 UTC
Git commit e039091932dc607f15fdfded875dc487ecd6949c by Nate Graham, on behalf of Aleix Pol.
Committed on 15/04/2021 at 19:39.
Pushed by ngraham into branch 'Plasma/5.21'.

fwupd: Make sure we initalise the device defaults
(cherry picked from commit 8ffd022f727eb193f9ba4dc079f46265ba136584)

M  +1    -0    libdiscover/backends/FwupdBackend/FwupdResource.cpp
M  +2    -1    libdiscover/backends/FwupdBackend/FwupdResource.h

https://invent.kde.org/plasma/discover/commit/e039091932dc607f15fdfded875dc487ecd6949c