fwupd: Make sure we initalise the device defaults

BUG: 435785